fixed horizontal scroll in filter, fixed gap for filterbeds on mobile, reduced gap for filterbeds on other screens, fixed clear filter after hide/open it

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -21,7 +21,7 @@
     "OneAndTwoRoom": "One-room and two-room",
     "OneAndThreeRoom": "One-room and three-room",
     "TwoAndThreeRoom": "Two-room and three-room",
-    "NotFound": "apartments not found",
+    "NotFound": "Apartments not found",
     "TextOfDescAdress": "-bedroom",
     "PricePeriod": "day"
   },
