--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -47,6 +47,10 @@
     "Apartments": "Apartments",
     "Rules": "Rules"
   },
+  "Filter":{
+    "Conditions":"Conditions",
+    "Beds":"Sleeping places"
+  },
   "BreadCrumbs": {
     "BackLink": "Back"
   },
