--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -47,6 +47,10 @@
         "Apartments": "Апартаменты",
         "Rules": "Правила"
     },
+    "Filter":{
+        "Conditions":"Условия",
+    "Beds":"Спальные места"
+  },
     "BreadCrumbs": {
         "BackLink": "Назад"
     },
