Messages are corrected

--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -17,10 +17,10 @@
         "Title": "Что будет в апартаментах?",
         "OneRoom": "Однокомнатные",
         "TwoRoom": "Двухкомнатные",
-        "ThreeRoom": "трехкомнатные",
-        "OneAndTwoRoom": "Однокомнатные та двухкомнатные",
-        "OneAndThreeRoom": "Однокомнатные та трехкомнатные",
-        "TwoAndThreeRoom": "Двухкомнатные та трехкомнатные",
+        "ThreeRoom": "Трехкомнатные",
+        "OneAndTwoRoom": "Однокомнатные и двухкомнатные",
+        "OneAndThreeRoom": "Однокомнатные и трехкомнатные",
+        "TwoAndThreeRoom": "Двухкомнатные и трехкомнатные",
         "NotFound": "Квартиры не найдены",
         "TextOfDescAdress": "-ком. кв.",
         "PricePeriod": "сутки"
